# ectop

./: .gitignore  404.html  AGENTS.md  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  reference.md  tutorial.md
examples/: ectop_demo.py  tutorial_suite.py
reference/: index.html
scripts/: capture_screenshots.py  smoke_test.py
search/: search_index.json
src/ecflowtui/: client.py  ecflow_tui.py
src/ecflowtui/widgets/: sidebar.py
src/ectop/: __init__.py  app.py  cli.py  client.py  constants.py
src/ectop/widgets/: content.py  search.py  sidebar.py  statusbar.py
src/ectop/widgets/modals/: confirm.py  variables.py  why.py
tests/: conftest.py  test_app.py  test_app_actions.py  test_cli.py  test_client.py  test_confirm.py  test_coverage_boost.py  test_coverage_improvement.py  test_expression_parsing.py  test_features.py  test_modals.py  test_new_features.py  test_refactor.py  test_script_edit.py  test_search_optimization.py  test_sidebar.py  test_statusbar.py  test_widgets.py
tutorial/: index.html
