[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ectop"
version = "0.1.0"
description = "A Textual interface to ecflow"
authors = [
    { name = "Barry Baker" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "textual",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pip-tools",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[project.scripts]
ectop = "ectop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 132

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
